bugfix/modalImageOverflow

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -111,8 +111,6 @@
       position: relative;
       justify-content: center;
       align-items: center;
-      width: 100%;
-      height: 100%;
       max-width: 75vw;
       max-height: 75vh;
   }
